Text fits and aligns correctly.

--- a/App/popup.css
+++ b/App/popup.css
@@ -55,11 +55,24 @@ input[type="text"] {
 }
 
 #image_to_copy {
-    width: 200px;
-    max-width: 200px;
     border: 1px solid black;
-    height: 150px;
+    max-width: 200px;
     max-height: 150px;
+    width: auto;
+    height: auto;
+    position: absolute;  
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+div#copyable{
+    width: 202px;
+    height: 152px;
+    vertical-align: middle;
+    position:relative;
 }
 
 .links>ul{
